// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiselect (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can render option hints 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0 [2m(Hint 0)[22m",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can set cursorAt to preselect an option 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can set custom labels 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m Option 0
[36m│[39m  [2m◻[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m Option 0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can set initial values 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [32m◼[39m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can submit without selection when required = false 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mnone[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > maxItems renders a sliding window 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=5>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt6",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt6[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > renders message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > renders multiple cancelled values 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m[2m, [22m[9m[2mopt1[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > renders multiple selected options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > renders validation errors 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[33m▲[39m  foo
[33m│[39m  [36m◻[39m opt0
[33m│[39m  [2m◻[22m [2mopt1[22m
[33m└[39m  [33mPlease select at least one option.[39m
   [0m[2mPress [90m[47m[7m space [27m[49m[39m to select, [90m[47m[7m enter [27m[49m[39m to submit[22m[0m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > shows hints for all selected options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [32m◼[39m [2mopt1[22m [2m(Hint 1)[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt0[22m [2m(Hint 0)[22m
[36m│[39m  [32m◼[39m opt1 [2m(Hint 1)[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt1[22m [2m(Hint 1)[22m
[36m│[39m  [36m◻[39m opt2 [2m(Hint 2)[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > sliding window loops downwards 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [36m◻[39m opt7
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [36m◻[39m opt8
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [36m◻[39m opt9
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=5>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [36m◻[39m opt10
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=6>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0",
  "<cursor.down count=7>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > sliding window loops upwards 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=7>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt11",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt11[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can render option hints 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0 [2m(Hint 0)[22m",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can set cursorAt to preselect an option 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can set custom labels 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m Option 0
[36m│[39m  [2m◻[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m Option 0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can set initial values 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [32m◼[39m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can submit without selection when required = false 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mnone[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > maxItems renders a sliding window 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=5>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt6",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt6[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > renders message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > renders multiple cancelled values 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m[2m, [22m[9m[2mopt1[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > renders multiple selected options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > renders validation errors 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[33m▲[39m  foo
[33m│[39m  [36m◻[39m opt0
[33m│[39m  [2m◻[22m [2mopt1[22m
[33m└[39m  [33mPlease select at least one option.[39m
   [0m[2mPress [90m[47m[7m space [27m[49m[39m to select, [90m[47m[7m enter [27m[49m[39m to submit[22m[0m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > shows hints for all selected options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m◼[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [32m◼[39m [2mopt1[22m [2m(Hint 1)[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt0[22m [2m(Hint 0)[22m
[36m│[39m  [32m◼[39m opt1 [2m(Hint 1)[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [32m◼[39m [2mopt1[22m [2m(Hint 1)[22m
[36m│[39m  [36m◻[39m opt2 [2m(Hint 2)[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m[2m, [22m[2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > sliding window loops downwards 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt0[22m
[36m│[39m  [36m◻[39m opt1
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [36m◻[39m opt2
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [36m◻[39m opt3
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [36m◻[39m opt4
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [36m◻[39m opt5
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [36m◻[39m opt6
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt5[22m
[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [36m◻[39m opt7
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt6[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [36m◻[39m opt8
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [36m◻[39m opt9
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=5>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [36m◻[39m opt10
[36m│[39m  [2m◻[22m [2mopt11[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=6>",
  "<erase.down>",
  "[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt0",
  "<cursor.down count=7>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > sliding window loops upwards 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [36m◻[39m opt0
[36m│[39m  [2m◻[22m [2mopt1[22m
[36m│[39m  [2m◻[22m [2mopt2[22m
[36m│[39m  [2m◻[22m [2mopt3[22m
[36m│[39m  [2m◻[22m [2mopt4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m◻[22m [2mopt7[22m
[36m│[39m  [2m◻[22m [2mopt8[22m
[36m│[39m  [2m◻[22m [2mopt9[22m
[36m│[39m  [2m◻[22m [2mopt10[22m
[36m│[39m  [36m◻[39m opt11
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=7>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [32m◼[39m opt11",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt11[22m",
  "
",
  "<cursor.show>",
]
`;
